--- a/index.html
+++ b/index.html
@@ -1,54 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Poseidon</title>
 
-    <!--Min egen stylesheet-->
-    <link href="css/stylesheet.css" rel="stylesheet">
-</head>
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="./image/favicon.ico">
 
-<body>
-    <header>
+    <!--icons-->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    </header>
+    <!--FONTS fra Google font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Neonderthaw&family=Permanent+Marker&family=Sora:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <!--ICONS fra Google font-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <!--Eget stylesheet-->
+    <link href="css/stylesheet.css" rel="stylesheet" />
 
-    <ul class="timeline">
+  </head>
 
-        <!-- Item 1 -->
-        <li>
-            <div class="direction-r">
-                <div class="package">
-                    <span class="title">Freelancer</span>
-                    <span class="time-package"><span class="time">2013 - present</span></span>
+
+  <body>
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top"><i class='bx bxs-chevrons-up'></i></button> 
+
+    <section class="hero">
+        <div class="main-width">
+            <header>
+                <div class="logo_tekst">
+                    <a href="index.html"><img src="./image/trident2.png" class="logo"></a>
+                    <h1><a href="#">Poseidon</a></h1>
                 </div>
-                <div class="desc">My current employment. Way better than the position before!</div>
-            </div>
-        </li>
 
-         <!-- Item 2 -->
-         <li>
-            <div class="direction-l">
-                <div class="package">
-                    <span class="title">Something</span>
-                    <span class="time-package"><span class="time">2013 - present</span></span>
+                <nav>
+                    <ul>
+                        <li><a href="#Features">Features</a></li>
+                        <li><a href="#Review">Review</a></li>
+                        <li><a href="#Help">Help</a></li>
+                    </ul>
+                </nav>
+
+                <button onclick="darken()" id="darkmode" title="darkmode"><i class='bx bxs-sun'></i></button>
+                <button onclick="darken2()" id="darkmode2" title="darkmode"><i class='bx bxs-moon' ></i></button>
+            </header>
+
+            <div class="content">
+                <div class="main-text">
+                    <h2>GAME OPTIMISER</h2>
+                    <h1>Poseidon Scanner</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, ultricies dui velit suscipit netus ultrices orci, ac himenaeos sociosqu fermentum phasellus litora. Facilisis at ornare cras molestie rutrum morbi sapien tempor, vulputate a eget non class venenatis curabitur, urna dui dignissim magna neque ullamcorper maecenas.</p>
+                    <a href="#" class="download-button"><i class='bx bx-cloud-download'></i>Download now</a>
+                    <a href="#Features" class="info-button"><i class='bx bxs-info-circle'></i>Features</a>
                 </div>
-                <div class="desc">My current employment. Way better than the position before!</div>
             </div>
-        </li>
+        </div>
+    </section>
+    <script type="text/javascript" src="/js/script.js" defer></script>
+  </body>
 
-        <!-- Item 3 -->
-        <li>
-            <div class="direction-r">
-                <div class="package">
-                    <span class="title">dat shit</span>
-                    <span class="time-package"><span class="time">2013 - present</span></span>
-                </div>
-                <div class="desc">My current employment. Way better than the position before!</div>
-            </div>
-        </li>
-
-    </ul>
-</body>
 </html>
