--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <!--Eget stylesheet-->
     <link href="css/stylesheet.css" rel="stylesheet" />
+    <!--jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
   </head>
 
 
   <body>
+
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class='bx bxs-chevrons-up'></i></button> 
 
@@ -39,9 +45,9 @@
 
                 <nav>
                     <ul>
-                        <li><a href="#Features">Features</a></li>
-                        <li><a href="#Review">Review</a></li>
-                        <li><a href="#Help">Help</a></li>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Work</a></li>
+                        <li><a href="">About</a></li>
                     </ul>
                 </nav>
 
@@ -60,6 +66,11 @@
             </div>
         </div>
     </section>
+
+    <div class="loader-wrapper">
+        <span class="loader"><span class="loader-inner"></span></span>
+    </div>
+
     <script type="text/javascript" src="/js/script.js" defer></script>
   </body>
 
