fjernet unødvedig stuff

--- a/index.html
+++ b/index.html
@@ -29,15 +29,16 @@
 
   <body>
 
+    <!--Loader-->
     <div class="loader-wrapper">
         <span class="loader"><span class="loader-inner"></span></span>
     </div>
 
-
+    <!--Custome cursor-->
     <div class="cursor-dot" data-cursor-dot></div>
     <div class="cursor-outline" data-cursor-outline></div>
     
-
+    <!--Blur intaktiv bg-->
     <div class="gradient-bg">
         <svg xmlns="http://www.w3.org/2000/svg">
             <defs>
