fixed content on to seprate pages

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
             <div class="content">
                 <div class="main-text">
-                    <h2>GAME OPTIMISER</h2>
-                    <h1>Poseidon Scanner</h1>
+                    <h2>PORTFOLIO</h2>
+                    <h1>Adrian Hoff</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, ultricies dui velit suscipit netus ultrices orci, ac himenaeos sociosqu fermentum phasellus litora. Facilisis at ornare cras molestie rutrum morbi sapien tempor, vulputate a eget non class venenatis curabitur, urna dui dignissim magna neque ullamcorper maecenas.</p>
                     <a href="#" class="download-button"><i class='bx bx-cloud-download'></i>Download now</a>
                     <a href="#Features" class="info-button"><i class='bx bxs-info-circle'></i>Features</a>
