small loader update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Poseidon</title>
+    <title>Adrian.H Portfolio</title>
 
     <!--favicon-->
     <link rel="icon" type="image/x-icon" href="./image/favicon.ico">
@@ -31,7 +31,9 @@
 
     <!--Loader-->
     <div class="loader-wrapper">
-        <span class="loader"><span class="loader-inner"></span></span>
+        <span class="loader"></span>
+        <h1 class="loader-text">loading inn work</h1>
+        <h1 class="work-in-prgogress">This is a work in progress</h1>
     </div>
 
     <!--Custome cursor-->
@@ -83,7 +85,7 @@
             <div class="content">
                 <div class="main-text">
                     <h2>PORTFOLIO</h2>
-                    <h1>Adrian Hoff</h1>
+                    <h1>work in progress</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, ultricies dui velit suscipit netus ultrices orci, ac himenaeos sociosqu fermentum phasellus litora. Facilisis at ornare cras molestie rutrum morbi sapien tempor, vulputate a eget non class venenatis curabitur, urna dui dignissim magna neque ullamcorper maecenas.</p>
                     <a href="#" class="download-button"><i class='bx bx-cloud-download'></i>Download now</a>
                     <a href="#Features" class="info-button"><i class='bx bxs-info-circle'></i>Features</a>
