--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
                     <a href="index.html"><img src="./image/jester.png" class="logo"></a>
                 </div>
                   <div class="menu-functions">
-                      <!--NAV test-->
+                      <!--NAV-->
                       <i class='bx bx-menu' onclick="openMenu()"></i>
                       <div id="container-hamburger">
                         <div id="close" onclick="closeMenu()"><i class='bx bx-x'></i></div>
                         <ul id="menu">
-                          <li><a href="#">Home</a></li>
+                          <li><a href="">Home</a></li>
                           <li><a href="">Work</a></li>
                           <li><a href="">About</a></li>
                       </ul>
@@ -97,11 +97,10 @@
 
             <div class="content">
                 <div class="main-text">
-                    <h2>PORTFOLIO</h2>
-                    <h1>work in progress</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, ultricies dui velit suscipit netus ultrices orci, ac himenaeos sociosqu fermentum phasellus litora. Facilisis at ornare cras molestie rutrum morbi sapien tempor, vulputate a eget non class venenatis curabitur, urna dui dignissim magna neque ullamcorper maecenas.</p>
-                    <a href="#" class="download-button"><i class='bx bx-cloud-download'></i>Download now</a>
-                    <a href="#Features" class="info-button"><i class='bx bxs-info-circle'></i>Features</a>
+                    <h2>IT Specialist</h2>
+                    <h1>Adrian Hoff</h1>
+                    <p>Welcome to my portfolio! Browse through to discover the projects I've worked on and the skills I bring to the table.</p>
+                    <a href="#" class="work-button"><i class='bx bxs-hdd'></i>My work</a>
                 </div>
             </div>
         </div>
