add little firefox thing

--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
     <div class="cursor-dot" data-cursor-dot></div>
     <div class="cursor-outline" data-cursor-outline></div>
 
-
-
     
     <!--Blur intaktiv bg-->
     <div class="gradient-bg">
@@ -63,6 +61,7 @@
             <div class="interactive"></div>
         </div>
     </div>
+
 
     <!--On top button-->
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class='bx bxs-chevrons-up'></i></button> 
@@ -97,7 +96,7 @@
 
             <div class="content">
                 <div class="main-text">
-                    <h2>IT Specialist</h2>
+                    <h2 id="job-title">IT Specialist</h2>
                     <h1>Adrian Hoff</h1>
                     <p>Welcome to my portfolio! Browse through to discover the projects I've worked on and the skills I bring to the table.</p>
                     <a href="#" class="work-button"><i class='bx bxs-hdd'></i>My work</a>
