--- a/index.html
+++ b/index.html
@@ -91,6 +91,16 @@
 
                     <button onclick="darken()" id="darkmode" title="darkmode"><i class='bx bxs-sun'></i></button>
                     <button onclick="darken2()" id="darkmode2" title="darkmode"><i class='bx bxs-moon' ></i></button>
+
+                    <button id="settings" title="settings" onclick="openSettings()"><i class='bx bxs-cog'></i></button>
+                    <div id="container-settings">
+                      <div id="settings-close" onclick="closeSettings()"><i class='bx bx-x'></i></div>
+                      <ul id="settings-menu">
+                        <li><a href="#">Mouse curser</a></li>
+                        <li><a href="#">Colors</a></li>
+                        <li><a href="#">Something</a></li>
+                    </ul>
+                    </div>
                   </div>
             </header>
 
