--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
         </div>
     </div>
 
+    
+    <!--Blur bg for firefox users-->
+    <div class="swiper">
+      <div class="swiper-wrapper">
+          <div class="gradient"></div>
+      </div>
+    </div>          
+
+    <div class="backgroundFirefox"></div>
+
 
     <!--On top button-->
     <button onclick="topFunction()" id="myBtn" title="Go to top"><i class='bx bxs-chevrons-up'></i></button> 
