add working cursor setting

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div id="container-settings">
                       <div id="settings-close" onclick="closeSettings()"><i class='bx bx-x'></i></div>
                       <ul id="settings-menu">
-                        <li><a href="#">Mouse curser</a></li>
+                        <li><a href="#" id="cursor-change">Mouse curser</a></li>
                         <li><a href="#">Colors</a></li>
                         <li><a href="#">Something</a></li>
                     </ul>
