--- a/index.html
+++ b/index.html
@@ -143,18 +143,20 @@
     <div id="content-work">
       <div class="outer-container">
         <div class="container">
-            <div class="tile small-square" id="tile1"><a href="link1.html"><img src="path/to/image1.jpg" alt="Tile 1"></a></div>
-            <div class="tile medium-rect" id="tile2"><a href="link2.html"><img src="path/to/image2.jpg" alt="Tile 2"></a></div>
-            <div class="tile large-square" id="tile3"><a href="link3.html"><img src="path/to/image3.jpg" alt="Tile 3"></a></div>
-            <div class="tile wide-rect" id="tile4"><a href="link4.html"><img src="path/to/image4.jpg" alt="Tile 4"></a></div>
-            <div class="tile tall-rect" id="tile5"><a href="link5.html"><img src="path/to/image5.jpg" alt="Tile 5"></a></div>
-            <div class="tile large-square" id="tile6"><a href="link6.html"><img src="path/to/image6.jpg" alt="Tile 6"></a></div>
-            <div class="tile small-square" id="tile7"><a href="link7.html"><img src="path/to/image7.jpg" alt="Tile 7"></a></div>
-            <div class="tile medium-rect" id="tile8"><a href="link8.html"><img src="path/to/image8.jpg" alt="Tile 8"></a></div>
-            <div class="tile wide-rect" id="tile9"><a href="link9.html"><img src="path/to/image9.jpg" alt="Tile 9"></a></div>
-            <div class="tile tall-rect" id="tile10"><a href="link10.html"><img src="path/to/image10.jpg" alt="Tile 10"></a></div>
-            <div class="tile medium-rect" id="tile11"><a href="link11.html"><img src="path/to/image11.jpg" alt="Tile 11"></a></div>
-            <div class="tile large-square" id="tile12"><a href="link12.html"><img src="path/to/image12.jpg" alt="Tile 12"></a></div>
+            <div class="tile small-square" id="tile1"><a href="link1.html"><img src="image/placeholder.png" alt="Tile 1"></a></div>
+            <div class="tile tall-rect" id="tile2"><a href="link2.html"><img src="image/placeholder.png" alt="Tile 2"></a></div>
+            <div class="tile large-tall-rect" id="tile3"><a href="link3.html"><img src="image/placeholder.png" alt="Tile 3"></a></div>
+            <div class="tile wide-rect" id="tile4"><a href="link4.html"><img src="image/placeholder.png" alt="Tile 4"></a></div>
+            <div class="tile medium-rect" id="tile5"><a href="link5.html"><img src="image/placeholder.png" alt="Tile 5"></a></div>
+            <div class="tile small-square" id="tile6"><a href="link6.html"><img src="image/placeholder.png" alt="Tile 6"></a></div>
+            <div class="tile tall-rect" id="tile7"><a href="link7.html"><img src="image/placeholder.png" alt="Tile 7"></a></div>
+            <div class="tile tall-rect" id="tile8"><a href="link8.html"><img src="image/placeholder.png" alt="Tile 8"></a></div>
+            <div class="tile wide-rect" id="tile9"><a href="link9.html"><img src="image/placeholder.png" alt="Tile 9"></a></div>
+            <div class="tile small-square" id="tile10"><a href="link10.html"><img src="image/placeholder.png" alt="Tile 10"></a></div>
+            <div class="tile medium-rect" id="tile11"><a href="link11.html"><img src="image/placeholder.png" alt="Tile 11"></a></div>
+            <div class="tile large-tall-rect" id="tile12"><a href="link12.html"><img src="image/placeholder.png" alt="Tile 12"></a></div>
+            <div class="tile large-tall-rect" id="tile13"><a href="link13.html"><img src="image/placeholder.png" alt="Tile 13"></a></div>
+            <div class="tile large-tall-rect" id="tile14"><a href="link14.html"><img src="image/placeholder.png" alt="Tile 14"></a></div>
         </div>
       </div>
     </div>
