change work tiles

--- a/index.html
+++ b/index.html
@@ -141,26 +141,15 @@
   
       <!--Work-->
     <div id="content-work">
-      <div class="outer-container">
-        <div class="container">
-            <div class="tile small-square" id="tile1"><a href="link1.html"><img src="image/placeholder.png" alt="Tile 1"></a></div>
-            <div class="tile tall-rect" id="tile2"><a href="link2.html"><img src="image/placeholder.png" alt="Tile 2"></a></div>
-            <div class="tile large-tall-rect" id="tile3"><a href="link3.html"><img src="image/placeholder.png" alt="Tile 3"></a></div>
-            <div class="tile wide-rect" id="tile4"><a href="link4.html"><img src="image/placeholder.png" alt="Tile 4"></a></div>
-            <div class="tile medium-rect" id="tile5"><a href="link5.html"><img src="image/placeholder.png" alt="Tile 5"></a></div>
-            <div class="tile small-square" id="tile6"><a href="link6.html"><img src="image/placeholder.png" alt="Tile 6"></a></div>
-            <div class="tile tall-rect" id="tile7"><a href="link7.html"><img src="image/placeholder.png" alt="Tile 7"></a></div>
-            <div class="tile tall-rect" id="tile8"><a href="link8.html"><img src="image/placeholder.png" alt="Tile 8"></a></div>
-            <div class="tile wide-rect" id="tile9"><a href="link9.html"><img src="image/placeholder.png" alt="Tile 9"></a></div>
-            <div class="tile small-square" id="tile10"><a href="link10.html"><img src="image/placeholder.png" alt="Tile 10"></a></div>
-            <div class="tile medium-rect" id="tile11"><a href="link11.html"><img src="image/placeholder.png" alt="Tile 11"></a></div>
-            <div class="tile large-tall-rect" id="tile12"><a href="link12.html"><img src="image/placeholder.png" alt="Tile 12"></a></div>
-            <div class="tile large-tall-rect" id="tile13"><a href="link13.html"><img src="image/placeholder.png" alt="Tile 13"></a></div>
-            <div class="tile large-tall-rect" id="tile14"><a href="link14.html"><img src="image/placeholder.png" alt="Tile 14"></a></div>
-        </div>
-      </div>
+      <div class="grid-item large">Project 1</div>
+      <div class="grid-item medium">Project 2</div>
+      <div class="grid-item small">Project 3</div>
+      <div class="grid-item medium">Project 4</div>
+      <div class="grid-item large">Project 5</div>
+      <div class="grid-item small">Project 6</div>
+      <div class="grid-item medium">Project 7</div>
+      <div class="grid-item small">Project 8</div>
     </div>
-
 
 
 
