--- a/index.html
+++ b/index.html
@@ -82,6 +82,28 @@
 
 
 
+         <!--About-->
+         <div id="content-about">
+          <div class="main-text-about">
+              <h2>About</h2>
+              <h1>Adrian Hoff</h1>
+              <p>Test test</p>
+          </div>
+        </div>
+      
+
+          <!--Work-->
+          <div id="content-work">
+            <div class="grid-item large">Project 1</div>
+            <div class="grid-item medium">Project 2</div>
+            <div class="grid-item small">Project 3</div>
+            <div class="grid-item medium">Project 4</div>
+            <div class="grid-item large">Project 5</div>
+            <div class="grid-item small">Project 6</div>
+            <div class="grid-item medium">Project 7</div>
+            <div class="grid-item small">Project 8</div>
+          </div>
+
 
 
     <!--Main-->
@@ -111,7 +133,7 @@
                       <div id="settings-close" onclick="closeSettings()"><i class='bx bx-x'></i></div>
                       <ul id="settings-menu">
                         <li><a href="#" id="cursor-change">Mouse curser</a></li>
-                        <li><a href="#">Colors</a></li>
+                        <li><a href="#" id="color-change">Random Colors</a></li>
                         <li><a href="#">Something</a></li>
                     </ul>
                     </div>
@@ -128,30 +150,6 @@
             </div>
         </div>
     </section>
-
-
-     <!--About-->
-    <div id="content-about">
-      <div class="main-text-about">
-          <h2>About</h2>
-          <h1>Adrian Hoff</h1>
-          <p>Test test</p>
-      </div>
-    </div>
-  
-      <!--Work-->
-    <div id="content-work">
-      <div class="grid-item large">Project 1</div>
-      <div class="grid-item medium">Project 2</div>
-      <div class="grid-item small">Project 3</div>
-      <div class="grid-item medium">Project 4</div>
-      <div class="grid-item large">Project 5</div>
-      <div class="grid-item small">Project 6</div>
-      <div class="grid-item medium">Project 7</div>
-      <div class="grid-item small">Project 8</div>
-    </div>
-
-
 
 
     <script type="text/javascript" src="/js/script.js" defer></script>
