fixed github api, and alot of centring

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
                   </div>
             </header>
 
+                      <!-- Work Section -->
+                    <div id="content-work" class="grid-container"></div>
+
             <div class="content">
                 <div class="main-text">
                     <h2 id="job-title">IT Specialist</h2>
@@ -144,64 +147,7 @@
         </div>
     </section>
 
-  <!--Work-->
-  <div id="content-work">
-    <div class="grid-item large">
-      <a href="link-to-project-1">
-        <img src="image/placeholder.png" alt="Project 1">
-        <span>Project 1</span>
-      </a>
-    </div>
-  
-    <div class="grid-item medium">
-      <a href="link-to-project-2">
-        <img src="image/placeholder.png" alt="Project 2">
-        <span>Project 2</span>
-      </a>
-    </div>
-  
-    <div class="grid-item small">
-      <a href="link-to-project-3">
-        <img src="path-to-image-3.jpg" alt="Project 3">
-        <span>Project 3</span>
-      </a>
-    </div>
-  
-    <div class="grid-item medium">
-      <a href="link-to-project-4">
-        <img src="path-to-image-4.jpg" alt="Project 4">
-        <span>Project 4</span>
-      </a>
-    </div>
-  
-    <div class="grid-item large">
-      <a href="link-to-project-5">
-        <img src="path-to-image-5.jpg" alt="Project 5">
-        <span>Project 5</span>
-      </a>
-    </div>
-  
-    <div class="grid-item small">
-      <a href="link-to-project-6">
-        <img src="path-to-image-6.jpg" alt="Project 6">
-        <span>Project 6</span>
-      </a>
-    </div>
-  
-    <div class="grid-item medium">
-      <a href="link-to-project-7">
-        <img src="path-to-image-7.jpg" alt="Project 7">
-        <span>Project 7</span>
-      </a>
-    </div>
-  
-    <div class="grid-item small">
-      <a href="link-to-project-8">
-        <img src="path-to-image-8.jpg" alt="Project 8">
-        <span>Project 8</span>
-      </a>
-    </div>
-  </div>
+
 
 
 
