--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="gradient-loader"></div>
         </div>
       </div> 
-        <h1 class="loader-text">loading inn work</h1>
+        <h1 class="loader-text">loading</h1>
         <h1 class="work-in-prgogress">This is a work in progress</h1>
     </div>
 
@@ -87,7 +87,7 @@
           <div class="main-text-about">
               <h2>About</h2>
               <h1>Adrian Hoff</h1>
-              <p>Welcome to our creative space! We are a team of passionate designers, developers, and dreamers who believe in the power of innovation and collaboration. Our mission is to bring bold ideas to life through thoughtful design, cutting-edge technology, and a relentless commitment to quality.
+              <p>(placeholder text) Welcome to our creative space! We are a team of passionate designers, developers, and dreamers who believe in the power of innovation and collaboration. Our mission is to bring bold ideas to life through thoughtful design, cutting-edge technology, and a relentless commitment to quality.
 
                 Founded in 2021, we've worked on diverse projects across industries, constantly pushing boundaries to create something truly unique. Whether it's crafting stunning websites, building dynamic apps, or reimagining user experiences, we're dedicated to delivering work that inspires and connects.
                 
@@ -125,9 +125,8 @@
                     <div id="container-settings">
                       <div id="settings-close" onclick="closeSettings()"><i class='bx bx-x'></i></div>
                       <ul id="settings-menu">
-                        <li><a href="#" id="cursor-change">Mouse curser</a></li>
+                        <li><a href="#" id="cursor-change">Mouse cursor</a></li>
                         <li><a href="#" id="color-change">Random Colors</a></li>
-                        <li><a href="#">Something</a></li>
                     </ul>
                     </div>
                   </div>
@@ -138,7 +137,7 @@
 
             <div class="content">
                 <div class="main-text">
-                    <h2 id="job-title">IT Specialist</h2>
+                    <h2 id="job-title">Junior Full-Stack Developer</h2>
                     <h1>Adrian Hoff</h1>
                     <p>Welcome to my portfolio! Browse through to discover the projects I've worked on and the skills I bring to the table.</p>
                     <a href="#" class="work-button" onclick="openWork(); closeMenu(); hideFrontText(); hideAboutText()"><i class='bx bxs-hdd'></i>My work</a>
